<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yu_hsienchou.hospitalregtopicsprj.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/authBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authBtn"
                android:layout_weight="1" />

            <Button
                android:text="@string/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logoutBtn"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/resBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resbtn"
                android:layout_weight="1" />

            <Button
                android:text="@string/regDelbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resDelete"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todayRegBtn"
                android:layout_weight="0.46"
                android:text="@string/nowDayregBtn" />

            <Button
                android:text="@string/HospLocBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hospLocBtn"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/todayBtn">

            <Button
                android:text="@string/ExitAppBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
